--- a/css/style.css
+++ b/css/style.css
@@ -22,7 +22,7 @@ body{
 @keyframes glow{
     0%, 100%{
         color: #fff;
-        text-shadow: 0 0 12px #39c6d6, 0 0 50px #39c6d6, 0 0 100px #39c6d6;
+        text-shadow: 0 0 12px #d139d6, 0 0 50px #d639c6, 0 0 100px #d639a4;
     }
     10%, 90%{
         color: #111;
@@ -49,6 +49,24 @@ body{
 }
 .greetings > span:nth-child(8){
     animation-delay: .8s;
+}
+.greetings > span:nth-child(9){
+    animation-delay: .9s;
+}
+.greetings > span:nth-child(10){
+    animation-delay: 1.0s  ;
+}
+.greetings > span:nth-child(10){
+    animation-delay: 1.1s ;
+}
+.greetings > span:nth-child(11){
+    animation-delay: 1.2s ;
+}
+.greetings > span:nth-child(12){
+    animation-delay: 1.3s ;
+}
+.greetings > span:nth-child(13){
+    animation-delay: 1.4s ;
 }
 
 .description{
